Update img background

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div class="wrapperContainer--img teste"> 
+        <div class="wrapperContainer--img"> <div class="wrapperContainer--img__purple"></div>
             <img class="imgContainer" src="img/image-header-mobile.jpg"
                 alt="Três mulheres em uma reunião com seus computadores em um clima descontraido">
         </div>
